itfsite/static/css/main.css
/* Global styles */

@import url(https://fonts.googleapis.com/css?family=Fredoka+One);
@import url(https://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic);
@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700);

body {
	background-color: #FAFAFA;
	font-family: 'Noto Serif', serif;
	font-size: 16px;
	line-height: 140%;
}

footer {
	font-size: 14px;
}

.navbar, h1, h2, h3, h4, h5, h6 {
	font-family: 'Roboto Slab', serif;
}

h1 {
	margin: 1em 0;
}

h2 {
	margin: 1.25em 0 1em 0;
	font-size: 24px;
}

h3 {
	font-size: 20px;
}

small, .small {
	line-height: 125%;
}

a {
	color: #272;
	border-bottom: 1px solid #0A0; /* accessibility */
}
	a:hover {
		text-decoration: none;
		color: #0A0;
		border-color: #0B0;
	}

.modal p {
	line-height: 133%;
}

/* MASTER ELEMENTS */

.navbar {
	background-color: #EEE;
}

	a.navbar-brand, .site-brand {
		font-family: 'Fredoka One', cursive;
	}
		.site-brand {
			padding-right: 2px;
		}

	.navbar a {
		border: none;
	}
		.navbar .nav a:hover {
			text-decoration: underline;
		}

@media screen and (min-width: 768px) {
	#body-content {
		border-left: 1px solid #EEE;
		border-right: 1px solid #EEE;
	}
}

.overline {
	margin-bottom: .33em;
	font-family: 'Roboto Slab', serif;
}
	.overline+h1 {
		margin-top: 0;
	}

#footer-social a {
	border: none;
}

#not-production {
	background-color: #E93;
	padding: 2px;
	text-align: center;
	color: white;
}

/* PAGE ELEMENTS */

@media screen and (min-width: 992px) {
	.col-md-left-border {
		padding-top: 1px;
		margin-top: -1px; 

		padding-left: 1em;
		padding-bottom: 1em;

		border-left: 1px solid #DDD;
	}

}

h3.invert {
	margin: 1em 0 1em -2px;
	font-weight: bold;
	color: white;
}
	h3.invert span {
		background-color: #582;
		padding: 5px 10px;
	}
	h3.invert span:after {
		content: "●●";
		padding-left: .66em;
	}

